cache mdds position in ScTable::InvalidateTextWidth (tdf#108298)

Again, normally starts container search from the beginning, so without
caching this is quadratic.

Change-Id: I3bb1ff40a326eb46780e45d3e3934773a7b77d06
Reviewed-on: https://gerrit.libreoffice.org/72406
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>